--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@meteora-ag/dlmm": "^1.0.0",
+    "@meteora-ag/dlmm": "^1.2.2",
+    "@solana/web3.js": "^1.95.4",
     "aws-sdk": "^2.1000.0",
     "axios": "^1.7.7",
     "dotenv": "^10.0.0",
