--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bn.js": "^5.2.1",
     "bs58": "^6.0.0",
     "dotenv": "^10.0.0",
+    "mathjs": "^13.2.0",
     "nodemailer": "^6.6.3",
     "winston": "^3.3.3"
   },
