--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
-    "@meteora-ag/dlmm": "^1.2.2",
+    "@meteora-ag/dlmm": "^1.3.0",
     "@solana/web3.js": "^1.95.4",
     "aws-sdk": "^2.1000.0",
     "axios": "^1.7.7",
     "bn.js": "^5.2.1",
     "bs58": "^6.0.0",
     "dotenv": "^10.0.0",
+    "inquirer": "^8.2.5",
     "mathjs": "^13.2.0",
     "nodemailer": "^6.6.3",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.6",
+    "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.13",
     "@types/node": "^14.18.63",
     "@types/nodemailer": "^6.4.16",
