--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
     "@meteora-ag/dlmm": "^1.3.0",
+    "@pythnetwork/client": "^2.22.1",
     "@pythnetwork/price-service-client": "^1.9.0",
     "@solana/web3.js": "^1.95.4",
     "aws-sdk": "^2.1000.0",
