--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bn.js": "^5.2.1",
     "bs58": "^6.0.0",
     "dotenv": "^10.0.0",
+    "express-rate-limit": "^7.5.0",
     "inquirer": "^8.2.5",
     "mathjs": "^13.2.0",
     "nodemailer": "^6.6.3",
