--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
     "@meteora-ag/dlmm": "^1.3.0",
+    "@meteora-ag/dlmm-sdk": "^0.7.7",
     "@pythnetwork/client": "^2.22.1",
     "@pythnetwork/price-service-client": "^1.9.0",
-    "@solana/web3.js": "^1.95.4",
+    "@solana/web3.js": "^1.98.0",
+    "@types/bs58": "^4.0.4",
     "aws-sdk": "^2.1000.0",
     "axios": "^1.7.7",
     "bn.js": "^5.2.1",
+    "body-parser": "^1.20.3",
     "bs58": "^6.0.0",
     "dotenv": "^10.0.0",
+    "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "inquirer": "^8.2.5",
     "mathjs": "^13.2.0",
@@ -27,6 +31,7 @@
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.6",
+    "@types/express": "^5.0.0",
     "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.13",
     "@types/node": "^14.18.63",
