--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bn.js": "^5.2.1",
     "body-parser": "^1.20.3",
     "bs58": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.13",
